--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My first web page</title>
-        <style>
-            img {
-                width: 100px;
-                height: 100px;
-                border-radius: 50px;
-                float: left;
-                margin-right: 10px;
-            }
-
-            .user {
-                font-weight: bold;
-            }
-        </style>
+        <title>Japa Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="style.css" >
     </head>
     <body>
-        <img src="images/yimit.jpg" alt="Picture of yimit">
-        <p class="user">@yimit</p>
-        <p>test</p>
+        <header>
+            <a href="#" class="logo">Logo</a>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Extra</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </header>
+        <section>
+            <img src="wbback.png" alt="back">
+            <img src="wbfront.png" alt="front">
+        </section>
     </body>
 </html>
