--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">Logo</a>
+            <a href="#" class="logo">Japa</a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -15,8 +15,9 @@
             </ul>
         </header>
         <section>
-            <img src="wbback.png" alt="back">
-            <img src="wbfront.png" alt="front">
+            <img src="wbback.png" id="wbback">
+            <h2 id="text">Japa</h2>
+            <img src="wbfront.png" id="wbfront">
         </section>
     </body>
 </html>
