--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             </ul>
         </header>
         <section>
-            <img src="wbback.png" id="wbback">
+            <img src="back.png" id="wbback">
             <h2 id="text">Japa</h2>
-            <img src="wbfront.png" id="wbfront">
+            <img src="front.png" id="wbfront">
+            <img src="water.png" id="wbwater">
         </section>
     </body>
 </html>
