--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@
         </script>
         <div>
             <img src="images/Japa.jpg" id="avatar" alt="Japa">
-
+        </div>
+        <div class="row">
+            <div class="column left">
+                <h2 class="name">Jacob Japa</h2> 
+                <div>
+                    <h3 class="infotext">Computer technician w. speciality in programming</h3>
+                    <h3 class="infotext">IT-Supporter at Blue World Technologies</h3>
+                </div>
+            </div>
+            <div class="column right">
+                <h2 class="projects">Projects</h2>
+                    <p>
+                        
+                    </p>
+            </div>
         </div>
     </body>
 </html>
