--- a/index.html
+++ b/index.html
@@ -47,9 +47,24 @@
             </div>
             <div class="column right">
                 <h2 class="projects">Projects</h2>
-                    <p>
-                        
-                    </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="innercolumn innerleft">
+                
+            </div>
+            <div class="innercolumn innermiddle">
+                <div class="projectinfo">
+                    OPENCV
+                </div>
+            </div>
+            <div class="innercolumn innerright">
+                <div class="projectinfo">
+                    ERP
+                </div>
+            </div>
+            <div class="ERPImage">
+                <img src="images/JapaINV.png" alt="JapaINV">
             </div>
         </div>
     </body>
