--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <ul>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Extra</a></li>
+                <li><a href="test.html">Extra</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </header>
@@ -37,35 +37,65 @@
         <div>
             <img src="images/Japa.jpg" id="avatar" alt="Japa">
         </div>
-        <div class="row">
-            <div class="column left">
-                <h2 class="name">Jacob Japa</h2> 
-                <div>
-                    <h3 class="infotext">Computer technician w. speciality in programming</h3>
-                    <h3 class="infotext">IT-Supporter at Blue World Technologies</h3>
-                </div>
-            </div>
-            <div class="column right">
-                <h2 class="projects">Projects</h2>
-            </div>
+        <div style="float: left; margin: 10px;">
+            <h2 class="name">
+                Jacob Japa
+            </h2>
         </div>
-        <div class="row">
-            <div class="innercolumn innerleft">
-                
-            </div>
-            <div class="innercolumn innermiddle">
-                <div class="projectinfo">
-                    OPENCV
-                </div>
-            </div>
-            <div class="innercolumn innerright">
-                <div class="projectinfo">
-                    ERP
-                </div>
-            </div>
-            <div class="ERPImage">
-                <img src="images/JapaINV.png" alt="JapaINV">
-            </div>
+        <div style="float: left; margin: 10px;">
+            <h2 class="projects">
+                Projects
+            </h2>
+        </div>
+        <div>
+            <h2 class="infotext">
+                Computer Technician w. speciality in programming
+            </h2>
+        </div>
+        <div>
+            <h2 class="infotext">
+                IT-Supporter at Blue World Technologies
+            </h2>
+        </div>
+        <div>
+            <h2 class="infotext">
+                Programming Enthusiast
+            </h2>
+        </div>
+        <div style="float: left;">
+            <h2 class="projectinfo">
+                OpenCV
+            </h2>
+        </div>
+        <div style="float: left;">
+            <h2 class="projectinfo left">
+                JapaINV
+            </h2>
+        </div>
+        <img src="images/OPENCV.png" alt="OpenCV" class="cvimg">
+        <img src="images/JapaINV.png" alt="JapaINV" class="japainvimg">
+        <div>
+            <p class="standard">
+                OpenCV (Open Source Computer Vision Library) is a library of
+            </p>
+            <p class="standard">
+                programming functions mainly aimed at real-time computer vision.
+            </p>
+            <p class="standard">
+                Originally developed by Intel, it was later supported 
+            </p>
+            <p class="standard">
+                by Willow Garage then Itseez (which was later acquired by Intel).
+            </p>
+            <p class="standard">
+                The library is cross-platform and free for use
+            </p>
+            <p class="standard">
+                under the open-source Apache 2 License.
+            </p>
+            <p class="standard">
+                Starting with 2011, OpenCV features GPU acceleration for real-time operations.
+            </p>
         </div>
     </body>
 </html>
