--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,41 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <body>
-            
-        </body>
+        <title>Japa</title>
+        <link rel="stylesheet" type="text/css" href="style.css" >
     </head>
+    <body>
+        <header>
+            <a href="#" class="logo">Japa</a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Extra</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+            </ul>
+        </header>
+    </body>
+    <body>
+        <style>
+            body {
+                background-image: url('images/fi1.jpg');
+                background-size:cover;
+                background-repeat: no-repeat;
+            }
+        </style>
+        <section>
+            <h2 class="text">Japa</h2>
+            <img src="images/fi2.png" id="wbfront">
+        </section>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+        </script>
+        <script>
+            $(window).scroll(function(){
+                $(".text").css("opacity", 1 - $(window).scrollTop() / 400)
+            });
+        </script>
+        <div>
+            <img src="images/Japa.jpg" id="avatar" alt="Japa">
+        </div>
+    </body>
 </html>
