--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <body>
         <header>
             <a>
-                <span class="logo" style="color: #50b9e6;">J</span>
-                <span class="logo" style="color: #50b9e6;">A</span>
-                <span class="logo" style="color: #2b2b2b">P</span>
-                <span class="logo" style="color: #2b2b2b">A</span>
+                <img src="images/img.png" alt="No">
             </a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
