--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,12 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">Japa</a>
+            <a>
+                <span class="logo" style="color: #50b9e6;">J</span>
+                <span class="logo" style="color: #50b9e6;">A</span>
+                <span class="logo" style="color: #2b2b2b">P</span>
+                <span class="logo" style="color: #2b2b2b">A</span>
+            </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
