--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <a>
-                <img src="images/img.png" alt="No">
+                <img src="images/img2.png" alt="No">
             </a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
