--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <a>
-                <img src="images/img2.png" alt="No">
+                <img src="images/jp.png" alt="No">
             </a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
@@ -20,16 +20,16 @@
     <body>
         <style>
             body {
-                background-image: url("images/conn.jpg");   
+                background-image: url("images/conn2.png");   
                 background-repeat:unset;
             }
         </style>
         <section>
             <h2 class="text">
-                <span class="logo" style="color: #50b9e6;">J</span>
-                <span class="logo" style="color: #50b9e6;">A</span>
-                <span class="logo" style="color: #2b2b2b">P</span>
-                <span class="logo" style="color: #2b2b2b">A</span>
+                <span class="logo strokeblue" style="color: #50b9e6;">J</span>
+                <span class="logo strokeblue" style="color: #50b9e6;">A</span>
+                <span class="logo strokeblack" style="color: #2b2b2b">P</span>
+                <span class="logo strokeblack" style="color: #2b2b2b ">A</span>
             </h2>
         </section>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
