--- a/about.html
+++ b/about.html
@@ -2,16 +2,16 @@
 <html>
     <head>
         <title>Japa</title>
-        <link rel="stylesheet" type="text/css" href="indexstyle.css" >
+        <link rel="stylesheet" type="text/css" href="aboutstyle.css" >
     </head>
     <body>
         <header>
             <a>
-                <img src="images/htmllogo.png" alt="No">
+                <img src="images/javalogo.png" alt="No">
             </a>
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html" class="active">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -26,10 +26,10 @@
         </style>
         <section>
             <h2 class="text">
-                <span class="logo strokeblack" style="color: #e87966;">J</span>
-                <span class="logo strokeblack" style="color: #e87966;">A</span>
-                <span class="logo strokeorange" style="color: #2b2b2b">P</span>
-                <span class="logo strokeorange" style="color: #2b2b2b ">A</span>
+                <span class="logo strokeblack" style="color: #e6b101;">J</span>
+                <span class="logo strokeblack" style="color: #e6b101;">A</span>
+                <span class="logo strokeyellow" style="color: #2b2b2b">P</span>
+                <span class="logo strokeyellow" style="color: #2b2b2b ">A</span>
             </h2>
         </section>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
