--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Japa</title>
-        <link rel="stylesheet" type="text/css" href="style.css" >
+        <link rel="stylesheet" type="text/css" href="contactstyle.css" >
     </head>
     <body>
         <header>
