--- a/projects.html
+++ b/projects.html
@@ -2,19 +2,16 @@
 <html>
     <head>
         <title>Japa</title>
-        <link rel="stylesheet" type="text/css" href="style.css" >
+        <link rel="stylesheet" type="text/css" href="projectstyle.css" >
     </head>
     <body>
         <header>
             <a>
-                <span class="logo" style="color: #50b9e6;">J</span>
-                <span class="logo" style="color: #50b9e6;">A</span>
-                <span class="logo" style="color: #2b2b2b">P</span>
-                <span class="logo" style="color: #2b2b2b">A</span>
+                <img src="images/csslogo.png" alt="No">
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="projects.html" class="active">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -23,14 +20,17 @@
     <body>
         <style>
             body {
-                background-image: url('images/fi1.jpg');
-                background-size:cover;
-                background-repeat: no-repeat;
+                background-image: url("images/bgcon.png");   
+                background-repeat:unset;
             }
         </style>
         <section>
-            <h2 class="text">Projects</h2>
-            <img src="images/fi2.png" id="wbfront">
+            <h2 class="text">
+                <span class="logo strokeblack" style="color: #0071bf;">J</span>
+                <span class="logo strokeblack" style="color: #0071bf;">A</span>
+                <span class="logo strokeblue" style="color: #2b2b2b">P</span>
+                <span class="logo strokeblue" style="color: #2b2b2b ">A</span>
+            </h2>
         </section>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
         </script>
@@ -39,8 +39,5 @@
                 $(".text").css("opacity", 1 - $(window).scrollTop() / 400)
             });
         </script>
-        <div>
-
-        </div>
     </body>
 </html>
