--- a/about.html
+++ b/about.html
@@ -39,5 +39,22 @@
                 $(".text").css("opacity", 1 - $(window).scrollTop() / 400)
             });
         </script>
+        <div class="row">
+            <div class="column">
+                <div style="margin: center;" class="card">
+                    some text
+                </div>
+            </div>
+            <div class="column">
+                <div style="margin: center;" class="card">
+                    some text
+                </div>
+            </div>
+            <div class="column">
+                <div style="margin: center;" class="card">
+                    some text
+                </div>
+            </div>
+        </div>
     </body>
 </html>
