--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Japa</title>
-        <link rel="stylesheet" type="text/css" href="projectstyle.css" >
+        <link rel="stylesheet" type="text/css" href="projectstyle.css">
     </head>
     <body>
         <header>
@@ -26,8 +26,8 @@
         </style>
         <section>
             <h2 class="text">
-                <span class="logo strokeblack" style="color: #0071bf;">J</span>
-                <span class="logo strokeblack" style="color: #0071bf;">A</span>
+                <span class="logo strokeblack" style="color: #00aee7;">J</span>
+                <span class="logo strokeblack" style="color: #00aee7;">A</span>
                 <span class="logo strokeblue" style="color: #2b2b2b">P</span>
                 <span class="logo strokeblue" style="color: #2b2b2b ">A</span>
             </h2>
@@ -39,5 +39,53 @@
                 $(".text").css("opacity", 1 - $(window).scrollTop() / 400)
             });
         </script>
+        <div>
+            <h2 class="workflow">Workflow</h2>
+        </div>
+            <div class="container">
+                <div class="card">
+                    <div class="face face1">
+                        <div class="content">
+                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
+                            <h3>Design</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
+                                <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="face face1">
+                        <div class="content">
+                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
+                            <h3>Code</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
+                                <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="face face1">
+                        <div class="content">
+                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true">
+                            <h3>Launch</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
+                                <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </body>
     </body>
 </html>
