--- a/about.html
+++ b/about.html
@@ -39,22 +39,52 @@
                 $(".text").css("opacity", 1 - $(window).scrollTop() / 400)
             });
         </script>
-        <div class="row">
-            <div class="column">
-                <div style="margin: center;" class="card">
-                    some text
-                </div>
-            </div>
-            <div class="column">
-                <div style="margin: center;" class="card">
-                    some text
-                </div>
-            </div>
-            <div class="column">
-                <div style="margin: center;" class="card">
-                    some text
-                </div>
-            </div>
+        <div>
+            <h2 class="workflow">Workflow</h2>
         </div>
+            <div class="container">
+                <div class="card">
+                    <div class="face face1">
+                        <div class="content">
+                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
+                            <h3>Design</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
+                                <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="face face1">
+                        <div class="content">
+                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
+                            <h3>Code</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
+                                <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="face face1">
+                        <div class="content">
+                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true">
+                            <h3>Launch</h3>
+                        </div>
+                    </div>
+                    <div class="face face2">
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
+                                <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </body>
 </html>
