--- a/projects.html
+++ b/projects.html
@@ -39,53 +39,28 @@
                 $(".text").css("opacity", 1 - $(window).scrollTop() / 400)
             });
         </script>
-        <div>
-            <h2 class="workflow">Workflow</h2>
-        </div>
-            <div class="container">
-                <div class="card">
-                    <div class="face face1">
-                        <div class="content">
-                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
-                            <h3>Design</h3>
-                        </div>
-                    </div>
-                    <div class="face face2">
-                        <div class="content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                                <a href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="face face1">
-                        <div class="content">
-                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
-                            <h3>Code</h3>
-                        </div>
-                    </div>
-                    <div class="face face2">
-                        <div class="content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                                <a href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="face face1">
-                        <div class="content">
-                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true">
-                            <h3>Launch</h3>
-                        </div>
-                    </div>
-                    <div class="face face2">
-                        <div class="content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                                <a href="#">Read More</a>
-                        </div>
-                    </div>
+        <div class="row">
+            <div class="column">
+                <div style="margin: center;" class="card">
+                    <h2>Website</h2>
+                    <img src="images/web.png" alt="">
+                    HTML is the standard markup language for Web pages.
                 </div>
             </div>
-        </body>
+            <div class="column">
+                <div style="margin: center;" class="card">
+                    <h2>OpenCV</h2>
+                    <img src="images/cv.png">
+                    OpenCV provides a real-time optimized Computer Vision library, tools, and hardware.
+                </div>
+            </div>
+            <div class="column">
+                <div style="margin: center;" class="card">
+                    <h2>JapaINV</h2>
+                    <img src="images/inv.png">
+                    JapaINV is an inventory system designed to fit all of your IT data
+                </div>
+            </div>
+        </div>
     </body>
 </html>
