--- a/projects.html
+++ b/projects.html
@@ -43,22 +43,28 @@
             <div class="column">
                 <div style="margin: center;" class="card">
                     <h2>Website</h2>
-                    <img src="images/web.png" alt="">
-                    HTML is the standard markup language for Web pages.
+                    <img src="images/web.png">
+                    <div>
+                        HTML is the standard markup language for Web pages.
+                    </div>
                 </div>
             </div>
             <div class="column">
                 <div style="margin: center;" class="card">
                     <h2>OpenCV</h2>
                     <img src="images/cv.png">
-                    OpenCV provides a real-time optimized Computer Vision library, tools, and hardware.
+                    <div>
+                        OpenCV provides a real-time optimized Computer Vision library, tools, and hardware
+                    </div>
                 </div>
             </div>
             <div class="column">
                 <div style="margin: center;" class="card">
                     <h2>JapaINV</h2>
                     <img src="images/inv.png">
-                    JapaINV is an inventory system designed to fit all of your IT data
+                    <div>
+                        JapaINV is an inventory system designed to fit all of your IT data
+                    </div>
                 </div>
             </div>
         </div>
