--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <div class="card">
                     <div class="face face1">
                         <div class="content">
-                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
+                            <img href="https://youtube.com" src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
                             <h3>Design</h3>
                         </div>
                     </div>
