--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
                 <span class="logo strokeblue" style="color: #2b2b2b">P</span>
                 <span class="logo strokeblue" style="color: #2b2b2b ">A</span>
             </h2>
+            <h2 style="color: #fff; margin-right: auto;">GitHub</h2>
         </section>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
         </script>
@@ -43,7 +44,7 @@
             <div class="column">
                 <div style="margin: center;" class="card">
                     <h2>Website</h2>
-                    <img src="images/web.png">
+                    <a href="https://github.com/MrJapa/Website" target="_blank"><img src="images/web.png"></a>
                     <div>
                         HTML is the standard markup language for Web pages.
                     </div>
@@ -52,7 +53,7 @@
             <div class="column">
                 <div style="margin: center;" class="card">
                     <h2>OpenCV</h2>
-                    <img src="images/cv.png">
+                    <a href="https://github.com/MrJapa/DCApp" target="_blank"><img src="images/cv.png"></a>
                     <div>
                         OpenCV provides a real-time optimized Computer Vision library, tools, and hardware
                     </div>
@@ -61,7 +62,7 @@
             <div class="column">
                 <div style="margin: center;" class="card">
                     <h2>JapaINV</h2>
-                    <img src="images/inv.png">
+                    <a href="https://github.com/MrJapa/JapaINV" target="_blank"><img src="images/inv.png"></a>
                     <div>
                         JapaINV is an inventory system designed to fit all of your IT data
                     </div>
