--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </header>
     </body>
@@ -46,14 +46,17 @@
                 <div class="card">
                     <div class="face face1">
                         <div class="content">
-                            <img href="https://youtube.com" src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
+                            <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
                             <h3>Design</h3>
                         </div>
                     </div>
                     <div class="face face2">
                         <div class="content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                                <a href="#">Read More</a>
+                            <p>
+                                I always like to prepare and design my program before I begin, 
+                                i like to think of methods and ways to complete it.
+                                I love the design part of programming.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -66,8 +69,11 @@
                     </div>
                     <div class="face face2">
                         <div class="content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                                <a href="#">Read More</a>
+                            <p>
+                                I love creating code, code is my form of expression, 
+                                as I can express my creativity and learn.
+                                I like going back to previous projects and evaluating the code.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -80,8 +86,11 @@
                     </div>
                     <div class="face face2">
                         <div class="content">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                                <a href="#">Read More</a>
+                            <p>
+                                When i'm satisfied with my code and have made sure
+                                the integrity is withheld, I release the program and 
+                                makes sure it runs with every system.
+                            </p>
                         </div>
                     </div>
                 </div>
