--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html" class="active">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </header>
     </body>
@@ -31,7 +31,6 @@
                 <span class="logo strokeblue" style="color: #2b2b2b">P</span>
                 <span class="logo strokeblue" style="color: #2b2b2b ">A</span>
             </h2>
-            <h2 style="color: #fff; margin-right: auto;">GitHub</h2>
         </section>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
         </script>
